# sketchlib-rust

./: .gitignore  Cargo.toml  README.md  features.md  rs_p4_comparison.md
.github/workflows/: ci.yml
benches/: box_vec.rs  count.rs  countmin.rs  hashlayer.rs  median_bench.rs  nitro.rs  nitro_batch.rs  octo_speedup.rs  row_access.rs  structured_countmin.rs
benchmark/: count_benchmark.txt  index.html
docs/: api_overview_additional_sketches.md  api_overview_core_sketches.md  api_overview_ehsketchlist.md  api_overview_enums.md  api_overview_exponential_histogram.md  api_overview_frameworks.md  apis.md  benchmark.md  common_api.md  common_structure_guide.md  contributors.md  development_guide.md  feature_list.md  features.md  fold_cms.md  fold_sketch_design.md  index.md  library_map.md  license.md  project_overview.md  quick_start_guide.md  readme_details.md  rs_p4_comparison.md  sketch_api.md  tests.md  timeline.md
docs/api/: api_cms_heap.md  api_coco.md  api_common.md  api_common_hash.md  api_common_heap.md  api_common_input.md  api_common_structures.md  api_count_sketch.md  api_countmin.md  api_cs_heap.md  api_ddsketch.md  api_ehsketchlist.md  api_ehunivoptimized.md  api_elastic.md  api_exponential_histogram.md  api_fold_cms.md  api_fold_cs.md  api_hashlayer.md  api_hydra.md  api_hyperloglog.md  api_kll.md  api_kmv.md  api_locher.md  api_microscope.md  api_nitrobatch.md  api_tumbling_window.md  api_uniform_sampling.md  api_univmon.md  api_univmon_optimized.md
examples/: nitro_bench.rs  nitro_example.rs
src/: lib.rs  test_utils.rs
src/common/: hash.rs  heap.rs  input.rs  key.rs  mod.rs  precompute_hash.rs  precompute_sample.rs  structure_utils.rs  structures.rs
src/sketch_framework/: chapter.rs  eh.rs  eh_sketch_list.rs  eh_univ_optimized.rs  hashlayer.rs  hydra.rs  mod.rs  nitro.rs  octo.rs  tumbling.rs  univmon.rs
src/sketchbook/: chapter.rs  eh.rs  um.rs
src/sketches/: cms_heap.rs  coco.rs  count.rs  countmin.rs  cs_heap.rs  ddsketch.rs  elastic.rs  fold_cms.rs  heap.rs  hll.rs  kll.rs  kmv.rs  locher.rs  microscope.rs  mod.rs  mode.rs  octo_delta.rs  univmon.rs
src/tests/: asap_api_compat.rs  mod.rs
tests/: chapter_composition.rs  structured_sketches.rs
(+21 files in other folders)
