[package]
name = "sketchlib-rust"
version = "0.1.0"
edition = "2024"

[features]
arroyo = ["dep:arroyo-udf-plugin"]

[dependencies]
ahash = "0.8.12"
rand = "0.9.1"
arroyo-udf-plugin = { version = "0.2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
base64 = "0.22.1"
rmp-serde = "1.3.0"
hex = "0.4.3"
rdkafka = "0.37.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1.11.1"
tracing = "0.1.41"
anyhow = "1.0.99"
twox-hash = "2.1.2"
bincode = {version = "2.0.1", features = ["serde"]}
prom_text_format_parser = "0.1.0"
rand_distr = "0.4"
pcap = "1.1" 
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[lib]
crate-type = ["rlib"]
name = "sketchlib_rust"
path = "src/lib.rs"
bench = false

[[bench]]
name = "hash_detailed"
harness = false

[[bench]]
name = "count"
harness = false

[[bench]]
name = "countmin"
harness = false

[[bench]]
name = "hashlayer"
harness = false

[[bench]]
name = "nitro"
harness = false

[[bench]]
name = "row_access"
harness = false

[[bench]]
name = "box_vec"
harness = false

[profile.release]
debug = true
strip = false
frame-pointer = "can-use"
lto = false