[package]
name = "sketchlib-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
twox-hash = "2.1.2"

[dev-dependencies]
criterion = "0.5"

[lib]
crate-type = ["rlib"]
name = "sketchlib_rust"
path = "src/lib.rs"
bench = false

[[bench]]
name = "hash_detailed"
harness = false

[[bench]]
name = "count"
harness = false

[[bench]]
name = "countmin"
harness = false

[[bench]]
name = "hashlayer"
harness = false

[[bench]]
name = "nitro"
harness = false

[[bench]]
name = "row_access"
harness = false

[[bench]]
name = "box_vec"
harness = false

[[bench]]
name = "median_bench"
harness = false

#[profile.release]
#debug = true
#strip = false
#frame-pointer = "can-use"
#lto = false
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
